vlib/v/scanner/tests/hex_consecutively_separator_err.out
vlib/v/scanner/tests/hex_consecutively_separator_err.vv:2:9: error: separator `_` is only valid between digits in a numeric literal
    1 | fn main() {
    2 |     _ := 0x_20
      |            ^
    3 | }
