vlib/v/scanner/tests/hex_consecutively_separator_err.vv
fn main() {
	_ := 0x_20
}
